--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Salinaka - React Ecommerce Store</title>
-    <link rel="icon" type="image/png" href="/static/favicon.png" />
+    <title>Furniture Fusion - Ecommerce Store</title>
+    <link rel="icon" type="image/png" href="/static/furnitureLogo/FF11.png" />
 </head>
 
 <body>
